# PlantsFighting

./: CMakeLists.txt  README.md
Animation/: CMakeLists.txt
Animation/include/Animation/: animation.h  atlas.h  util.h
Animation/src/: animation.cpp  atlas.cpp
PlantsFighting/: CMakeLists.txt
PlantsFighting/include/PlantsFighting/: PlantsFighting.h  game_scene.h  menu_scene.h  scene.h  scene_manager.h  selector_scene.h
PlantsFighting/src/: main.cpp  scene_manager.cpp
lib/: animation.lib
